<resources>
    <string name="app_name">VitaminsTests</string>

    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_discover">DiscoverActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_model">ModelActivity</string>
    <string name="title_activity_info">Device Information</string>
    <string name="select_model_title">Select Model</string>
    <string name="main_name">VitaminTest Application</string>
    <!-- Analysis strings -->
    <string name="login_button">LOGIN</string>
    <string name="logout_button">LOGOUT</string>
    <string name="analyze_button">ANALYZE SUBSTANCE</string>
    <string name="select_button">SELECT ANALYSIS MODEL</string>


    <!-- Controls strings -->
    <string name="discover_button">SCIO?</string>
    <string name="connect_button">CONNECT THE SPECTROMETER</string>
    <string name="calibrate_button">CALIBRATE</string>
    <string name="is_calibrate_button">CALIBRATION?</string>
    <string name="read_bat_button">BATTERY STATUS</string>
    <string name="disconnet_button">DISCONNECT</string>
    <string name="info_button">INFO</string>

    <!-- Test strings -->
    <string name="deviceName">Spectrophotometer</string>
    <string name="deviceAddress">Address</string>
    <string name="username">DRM</string>
    <string name="modelName">MODELS</string>
    <string name="modelId">MID</string>


</resources>
