<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="start"
                    android:layout_marginEnd="23dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_action_name" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/main_name"
                    android:textColor="#000"
                    android:textSize="22sp" />

            </LinearLayout>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:orientation="vertical"
                        android:padding="@dimen/element_padding">

                        <LinearLayout
                            style="@android:style/ButtonBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button"
                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:background="@color/button_material_dark"
                                android:onClick="doLogin"
                                android:text="@string/login_button"
                                android:textColor="@android:color/holo_green_dark" />

                            <Button
                                android:id="@+id/buttonLogout"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/button"
                                android:layout_toRightOf="@+id/button"
                                android:layout_weight="1"
                                android:background="@color/button_material_dark"
                                android:onClick="doLogout"
                                android:text="@string/logout_button"
                                android:textColor="@color/red" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button_analyze"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/background_material_light"
                                android:onClick="doAnalyze"
                                android:text="@string/analyze_button" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button_models"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/button"
                                android:layout_weight="1"
                                android:background="@color/background_material_light"
                                android:onClick="doModels"
                                android:text="@string/select_button" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/element_padding"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Username"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />

                                <TextView
                                    android:id="@+id/tv_username"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:text="-"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textViewModel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_column="8"
                                    android:text="Selected Model"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />

                                <TextView
                                    android:id="@+id/tv_model"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_column="9"
                                    android:layout_marginLeft="5dp"
                                    android:text="-"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/element_padding"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:orientation="vertical"
                        android:padding="@dimen/element_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="Spectrometer Controls"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button_discover"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="111dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:onClick="doDiscover"
                                android:text="@string/discover_button" />

                            <Button
                                android:id="@+id/button_disconnect"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="doDisconnect"
                                android:text="@string/disconnet_button"
                                android:textColor="@color/red" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <Button
                                android:id="@+id/button_connect"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:background="@color/grey"
                                android:onClick="doConnect"
                                android:text="@string/connect_button"
                                android:textColor="@android:color/holo_green_dark" />


                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button_is_calibrate"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:onClick="checkCalibration"
                                android:text="@string/is_calibrate_button" />

                            <Button
                                android:id="@+id/button_calibrate"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:onClick="doCalibrate"
                                android:text="@string/calibrate_button" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button_read_battery"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="101dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="readBattery"
                                android:text="@string/read_bat_button" />

                            <Button
                                android:id="@+id/button_info"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/info_button" />

                        </LinearLayout>



                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/element_padding"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="SCiO Name"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />

                                <TextView
                                    android:id="@+id/tv_scio_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:text="-"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingRight="5dp"
                                    android:text="SCiO Address"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />

                                <TextView
                                    android:id="@+id/tv_scio_address"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:text="-"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Status"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />

                                <TextView
                                    android:id="@+id/tv_scio_status"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:text="-"
                                    android:textAppearance="?android:attr/textAppearanceSmall" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
